Fixed layout and overlap issues with the Github ribbon on mobile and larger screens

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -1,3 +1,18 @@
-.navbar {
+// Adds extra padding to the right menu so it doesn't overlap with the "Fork Me" ribbon on medium screens
+.navbar-right {
+	@include susy-breakpoint($screen-sm) { padding-right: 6em; }
 
+	@include susy-breakpoint($screen-lg) { padding-right: 0; }
+}
+
+// Puts the "Fork Me" ribbon below the navbar on mobile screens
+.header-ribbon {
+	img {
+		@include position(absolute, 52px 0 null null);
+
+		@include susy-breakpoint($screen-sm) {
+			top: 0;
+			z-index: 9999; // Ribbon is over the menu on larger screens, but not over the mobile dropdown
+		}
+	}
 }
